# betfair_stream_api_rust

./: .travis.yml  Cargo.toml  Dockerfile.exchange_recorder_rust  Dockerfile.exchange_stream_recorder_rust  README.md  docker-compose.yaml
dumps/: sub.183738831.json
exchange_recorder/: Cargo.toml
exchange_recorder/src/: app_config_load.rs  betfair_tls_connect.rs  main.rs  metrics.rs
exchange_recorder/src/config/: app_config.rs  app_config_load.rs  mod.rs
exchange_recorder/src/exchange_recorder/: exchange_subscribe_recorder.rs  mod.rs
exchange_recorder/src/metrics/: metrics_server.rs  metrics_statics.rs  mod.rs
exchange_recorder/src/model/: mod.rs  mongo.rs  stream.rs
