[package]
name = "exchange_recorder"
version = "0.1.0"
authors = ["sean <pulpfictionost@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "1.2.2"
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
tokio = { version = "1.2.0", features = ["full"] }
native-tls = "0.2.7"
rocket = "0.4.7"
lazy_static = "1.4.0"
prometheus = "0.11.0"
envconfig = "0.9.1"
futures = "0.3.12"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["async-std-runtime"]